# awscli-sqsall

./: .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPING.md  LICENSE  README.md  pyproject.toml  release.sh  setup.cfg  setup.py
.github/workflows/: pre-commit-update.yml  pre-commit.yml  publish.yml
sqsall/: __init__.py
