[metadata]
name = awscli-sqsall
version = 1.0.2
author = Paulo Köch
author_email = paulo.koch@gmail.com
description = awscli plugin to treat SQS queues more like files.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/pkoch/awscli-sqsall
project_urls =
    Bug Tracker = https://github.com/pkoch/awscli-sqsall/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:

python_requires = >=3.6
install_requires =
    awscli >=1.16.140

[options.packages.find]
exclude = tests/

[tool.black]
